Fixed Spacing
- fixed spacing issue causing title to be covered by form

- created independent style sheet for signup page

--- a/main.css
+++ b/main.css
@@ -25,12 +25,6 @@ h1 {
     color: white;
     font-size:15px;
 }
-h2 {
-    text-align: center;
-    margin-bottom: 20px;
-    color: white;
-    font-size: 60px;
-}
 .textBoxdiv {
     border-bottom: 2xp solid white;
     position: relative;
@@ -66,10 +60,4 @@ h2 {
 }
 .signUp a {
     color: black;
-}
-.center {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
 }
